# crunchy-userinit-controller

./: Dockerfile  README.md  index.yaml  mise.local.toml  pyproject.toml
.github/workflows/: build.yml  chart-release.yml  release.yml  test.yml
charts/crunchy-userinit/: Chart.yaml  README.md  values.yaml
charts/crunchy-userinit/tests/: deployment_test.yaml  rbac_test.yaml  service_test.yaml  serviceaccount_test.yaml
charts/crunchy-userinit/tests/__snapshot__/: deployment_test.yaml.snap  rbac_test.yaml.snap  service_test.yaml.snap  serviceaccount_test.yaml.snap
src/: entrypoint.sh
